--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <section class="hall-of-fame">
             <h2>🏆 Hall of Fame - Miembros Destacados</h2>
             <div class="members-grid">
-                <div class="member-slot" id="member-1">Miembro 1 (CTF/Código)</div>
+                <div class="member-slot" id="member-1">Miembro destacado 33 por su herramientas ip loggers</div>
                 <div class="member-slot" id="member-2">Miembro 2 (CTF/Código)</div>
                 <div class="member-slot" id="member-3">Miembro 3 (CTF/Código)</div>
                 <div class="member-slot" id="member-4">Miembro 4 (CTF/Código)</div>
@@ -236,4 +236,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
