--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                         <img src="miembro1.png" alt="Foto de Miembro 1">
                     </div>
                     <div class="member-text">
-                        **[Nombre de Usuario]** - Ganador del CTF "Shadow Protocol" de Q3. Código limpio y eficaz.
+                        **[victor cespedes 16]** - Ganador del CTF "Shadow Protocol" de Q3. Código limpio y eficaz.
                     </div>
                 </div>
                 <div class="member-card">
@@ -396,4 +396,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
