--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         </header>
         
         <section class="access-gates">
-            <a href="[ENLACE_INVITACION_DISCORD]" class="platform-button discord-button" target="_blank">
+            <a href="https://t.me/+Xc-pHAGP_gVmZTdh" class="platform-button discord-button" target="_blank">
                 <i class="fab fa-discord"></i> Discord
             </a>
             <a href="[ENLACE_TELEGRAM_PRINCIPAL]" class="platform-button telegram-button" target="_blank">
@@ -523,7 +523,7 @@
                         <img src="miembro1.png" alt="Foto de Miembro 1">
                     </div>
                     <div class="member-text">
-                        **[Nombre de Usuario 1]** - Ganador indiscutible del CTF "Shadow Protocol" de Q3. Su código limpio y eficaz demostró habilidades superiores en *reversing* binario y análisis forense. ¡Una verdadera leyenda en la comunidad!
+                        [33DiscosDuros] - Contribución completa a la configuración WEB y BOT de nuestra comunidad.
                     </div>
                 </div>
                 <div class="member-card">
@@ -531,7 +531,7 @@
                         <img src="miembro2.png" alt="Foto de Miembro 2">
                     </div>
                     <div class="member-text">
-                        **[Nombre de Usuario 2]** - Visionario que contribuyó con una herramienta Python automatizada para ofuscación de *payloads* y *bypass* de AV. Un gran aporte *open source* que ya está en uso por muchos miembros.
+                        [OpenHailmer66] - Contribución con un servidor para alojar los mensajes del foro y su configuración entera.
                     </div>
                 </div>
                 <div class="member-card">
@@ -593,7 +593,7 @@
                         <strong>¡Lanzamiento de la versión 2.0 de PhishGuard!</strong>
                         <p>Hemos liberado la v2.0 de nuestra herramienta interna "PhishGuard", con soporte para Python 3.10 y nuevos templates de *phishing* para una mayor efectividad.</p>
                         <div class="announcement-photo-container">
-                            <img src="noticia_phishguard.png" alt="Imagen de la nueva versión de PhishGuard">
+                            <img src="noticia.png" alt="Imagen de la nueva versión de PhishGuard">
                         </div>
                     </div>
                     <div class="announcement-item">
@@ -665,4 +665,5 @@
 
 </body>
 </html>
+
 
