--- a/index.html
+++ b/index.html
@@ -505,10 +505,10 @@
         </header>
         
         <section class="access-gates">
-            <a href="https://t.me/+Xc-pHAGP_gVmZTdh" class="platform-button discord-button" target="_blank">
+            <a href="proximamente" class="platform-button discord-button" target="_blank">
                 <i class="fab fa-discord"></i> Discord
             </a>
-            <a href="[ENLACE_TELEGRAM_PRINCIPAL]" class="platform-button telegram-button" target="_blank">
+            <a href="https://t.me/+Xc-pHAGP_gVmZTdh" class="platform-button telegram-button" target="_blank">
                 <i class="fab fa-telegram-plane"></i> Telegram
             </a>
         </section>
@@ -665,5 +665,6 @@
 
 </body>
 </html>
+
 
 
