--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                         <img src="miembro3.png" alt="Foto de Miembro 3">
                     </div>
                     <div class="member-text">
-                        **[Nombre de Usuario 3]** - El miembro más activo y servicial en el foro durante el último mes. Su dedicación al soporte de novatos y su rol como mantenedor de las FAQs es invaluable. Un pilar fundamental de Protocolo Leviatham.
+                        [DarkNet16] - Miembro colaborador, Ayudo a probar los sitios web y bots nuevos.
                     </div>
                 </div>
                 <div class="member-card">
@@ -665,6 +665,7 @@
 
 </body>
 </html>
+
 
 
 
